# clyde_battery_sim

./: CMakeLists.txt  README.md
cfg/: batteries.json
inc/: battery.hpp  config.hpp
src/: battery.cpp  battery_sim.cpp  config.cpp
